SQL/OCI: Correctly calculate utc offset string when icu is not available

When ICU is not available, QTimeZone::displayName() does not return a
valid timezone offset string so the OCI driver will get a wrong utc
offset string and inserting a QDateTime will go wrong.
Fix it by creating the utc offset string by ourself (toOffsetString()
inside qdatetime.cpp is static and therefore not accessible for us).

Fixes: QTBUG-111275
Change-Id: Ib724d760688614e162246e1e028ee5e004cc9477
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 6b9977c4adfa0ffd9cb87b4aec288c7a335aef6c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>